--- a/计算机网络.md
+++ b/计算机网络.md
@@ -303,9 +303,29 @@ IP地址的编制方法：
 
 当没有划分子网时，IP地址是两级结构。划分子网后IP地址变成了三级结构。划分子网把IP地址的主机号部分进行再划分，而不改变IP地址原来的网络号。
 
-**子网掩码** 从IP地址划分子网 ，推荐在子网掩码中选用连续的1，以免出现可能发生的差错。不管网络有没有划分子网，通过和IP地址做“与”运算就可以得出网络地址。子网掩码是一个网络或一个子网的重要属性。
+**子网掩码** 从IP地址划分子网 ，推荐在子网掩码中选用连续的1，以免出现可能发生的差错。不管网络有没有划分子网，通过和IP地址做“与”运算就可以得出网络地址。子网掩码是一个网络或一个子网的重要属性。两个路由器交换信息是，必须把自己所在网络的子网掩码告诉给相邻路由器。
 
 无论是否划分子网，所有网络都必须使用子网掩码，路由器的路由表中也必须有子网掩码这一栏，如果一个网络不划分子网，那该网络的子网掩码就使用默认子网掩码。
 
-**默认子网掩码**  1的位置和IP地址的中网络号字段net-id 正好相对应。因此，若用默认子网掩码 和某个不划分子网的IP地址
+**默认子网掩码**  1的位置和IP地址的中网络号字段net-id 正好相对应。因此，若用默认子网掩码 和某个不划分子网的IP地址逐位相与，就应当能够得出该IP地址的网络地址。A类地址的默认子网掩码 255.0.0.0 B类 255.255.0.0 C类255.255.255.0 。
+
+划分子网增加了灵活性，但却减少了能够连接在网络上的主机总数。
+
+同样的IP地址和不同的子网掩码可以得出相同的网络地址。
+
+### 4.3.2 使用子网时分组的转发
+
+子网划分后，路由表必须包含三项内容：目的网络地址、子网掩码和下一跳地址。
+
+划分子网情况，路由器转发分组的算法如下：
+
+1. 从收到的数据报的首部提取目的IP地址D。
+2. 先判断是否为直接交付。对路由器直接相连的网络逐个进行检查：用各网络的子网掩码和D逐位相“与”，看结果是否和相应的网络地址匹配。匹配则直接交付，转发任务结束。否则就是间接交付，执行3
+3. 若路由表中有目的地址为D的特定主机路由，则把数据报传送给路由表中所指明的下一跳路由器，否则执行4
+4. 对路由表中的每一行，用其中的子网掩码和D逐位相与，其结果为N。若N与某行的目的网络地址匹配，则把数据报传送给该行指明的下一跳路由器；否则，执行5
+5. 若路由表中有一个默认路由，则把数据报传送给路由表中所指明的默认路由器；否则报告转发分组出错。
+
+### 4.3.3 无分类编址 CIDR(构造超网)
+
+1. 网络前缀
 
