--- a/计算机网络.md
+++ b/计算机网络.md
@@ -329,3 +329,27 @@ IP地址的编制方法：
 
 1. 网络前缀
 
+> B类IP地址殆尽；互联网主干网上的路由表中的项目数急剧增长；整个IPv4地址空间最终将全部耗尽。
+
+使用**变长子网掩码VLSM** 可进一步提高IP地址资源的利用率。在VLSM的基础上研究出**无分类编址**方法，正式名字是**无分类域间路由选择CIDR** 
+
+主要的特点
+
+1. CIDR 消除了传统A类、B类和C类地址以及划分子网的概念 ，能更加有效地分配IPv4的地址空间。并且在新的IPv6使用之前容许互联网的规模继续增长。采用两级编址，这是无分类的两级编址，记为：
+
+   ​					IP 地址 ::={<网络前缀>,<主机号>}
+
+   还有一种**斜线记法**，在IP地址后面加上斜线，然后写上网络前缀所占的位数。
+
+2. CIDR 还把网络前缀相同的连续IP地址组成一个“CIDR地址块”。只要知道地址块中的任何一个地址，就可以知道起始地址和最大地址，以及地址块中的地址数。为了方便进行路由选择，兼容用子网划分和子网掩码的网络CIDR使用32位的**地址编码** ，地址掩码由一串1和0组成，1个个数为斜线记法的个数。
+
+3. **CIDR不使用子网** 是指CIDR并没有在32位地址中指明若干位作为子网字段。
+
+4. 斜线记法除了表示一个IP地址外，还提供了其他一些重要的信息。可以知道地址块包含的IP地址数量，地址块的最小地址和最大地址。
+
+5. **路由聚合** 在路由表中利用CIDR地址块来查找目的网络，使得路由表中的一个项目可以表示原来传统分类地址的很多个路由。也称为**构成超网**。
+
+   路由聚合有利于减少路由器之间的路由选择信息的交换，从而提高了整个互联网的性能。
+
+6. 
+
