--- a/计算机网络.md
+++ b/计算机网络.md
@@ -199,7 +199,7 @@ CSMA/CD 协议的要点：
 
 # 4 网络层
  > - 虚拟互连网络
- > - IP地址与物流地址的关系
+ > - IP地址与物理地址的关系
  > - 传统的分类的IP地址（包括子网掩码）和无分类域间路由选择CIDR
  > - 路由选择协议的工作原理
 
@@ -235,7 +235,7 @@ IP地址的编制方法：
 
 **重要特点**
 1. 每一个IP地址都是由网络号和主机号两部分组成。
-2. IP地址是标志一台主机和一条链路的接口。
+2. IP地址是标志一台主机或者为一条链路的接口。
 3. 用转发器和网桥 （网络层以下的设备）连接起来的若干个局域网仍为一个网络。
 4. 在IP地址中，所有分配到网络号的网络都是平等的。
 
@@ -291,11 +291,11 @@ IP地址的编制方法：
 
 基本思路： 
 
-1. 一个拥有许多物理网络的单位，可将所属的物理网络划分为若干个子网。 本单位以外的网络看不见这个网络是由多少个子网组成，因为这个单位对外仍然表现为一个网络
+1. 一个拥有许多物理网络的单位，可将所属的物理网络划分为若干个子网。 本单位以外的网络看不见这个网络是由多少个子网组成，因为这个单位对外仍然表现为一个网络。
 
 2. 从网络的主机号借用若干位作为**子网号**，主机号也相应减少了同样的位数，用一下记法来表示三级IP地址。
 
-   **IP地址 ::={<网络号>,<子网号>，<主机号>}**
+   **IP地址 ::={<网络号>,<子网号>,<主机号>}**
 
 3. 凡是从其他网络发送给本单位某台主机的IP数据报，仍然是根据IP数据报的目的网络号找到连接在本单位的网络上的路由器。但此路由器收到IP数据报后，再按目的网络号和子网号找到目的子网，把IP数据报交付目的主机。
 
@@ -335,21 +335,61 @@ IP地址的编制方法：
 
 主要的特点
 
-1. CIDR 消除了传统A类、B类和C类地址以及划分子网的概念 ，能更加有效地分配IPv4的地址空间。并且在新的IPv6使用之前容许互联网的规模继续增长。采用两级编址，这是无分类的两级编址，记为：
+- CIDR 消除了传统A类、B类和C类地址以及划分子网的概念 ，能更加有效地分配IPv4的地址空间。并且在新的IPv6使用之前容许互联网的规模继续增长。采用两级编址，这是无分类的两级编址，记为：
 
-   ​					IP 地址 ::={<网络前缀>,<主机号>}
+​					**IP 地址 ::={<网络前缀>,<主机号>}**
 
-   还有一种**斜线记法**，在IP地址后面加上斜线，然后写上网络前缀所占的位数。
+还有一种**斜线记法**，在IP地址后面加上斜线，然后写上网络前缀所占的位数。
 
-2. CIDR 还把网络前缀相同的连续IP地址组成一个“CIDR地址块”。只要知道地址块中的任何一个地址，就可以知道起始地址和最大地址，以及地址块中的地址数。为了方便进行路由选择，兼容用子网划分和子网掩码的网络CIDR使用32位的**地址编码** ，地址掩码由一串1和0组成，1个个数为斜线记法的个数。
+- CIDR 还把网络前缀相同的连续IP地址组成一个“CIDR地址块”。只要知道地址块中的任何一个地址，就可以知道起始地址和最大地址，以及地址块中的地址数。为了方便进行路由选择，以及兼容还使用子网划分和子网掩码的网络，CIDR使用32位的**地址掩码** ，地址掩码由一串1和0组成，1个个数为斜线记法的个数。
 
-3. **CIDR不使用子网** 是指CIDR并没有在32位地址中指明若干位作为子网字段。
+- **CIDR不使用子网** 是指CIDR并没有在32位地址中指明若干位作为子网字段。
 
-4. 斜线记法除了表示一个IP地址外，还提供了其他一些重要的信息。可以知道地址块包含的IP地址数量，地址块的最小地址和最大地址。
+- 斜线记法除了表示一个IP地址外，还提供了其他一些重要的信息。可以知道地址块包含的IP地址数量，地址块的最小地址和最大地址。
 
-5. **路由聚合** 在路由表中利用CIDR地址块来查找目的网络，使得路由表中的一个项目可以表示原来传统分类地址的很多个路由。也称为**构成超网**。
+- **路由聚合** 在路由表中利用CIDR地址块来查找目的网络，使得路由表中的一个项目可以表示原来传统分类地址的很多个路由。也称为**构成超网**。
 
    路由聚合有利于减少路由器之间的路由选择信息的交换，从而提高了整个互联网的性能。
 
-6. 
+   <img src="https://pic.downk.cc/item/5e43a5ce2fb38b8c3ccc3866.jpg" style="zoom:80%"/>
 
+- 网络前缀越短，其地址块所包含的地址数就越多。
+2. 最长前缀匹配
+
+   > 采用网络前缀记法，IP地址由网络前缀和主机号这两个部分组成，此时路由表中项目由 网络前缀和下一跳地址组成。因而，在查找路由表时可能会得到不止一个匹配结果。
+
+   应当从匹配结果中选择具有最长网络前缀的路由，这叫做最长前缀匹配。因为网络前缀越长，其地址块就越小，路由也就越具体。因为越具体的地址越接近于目的地址。
+
+3. 使用二叉线索查找路由表
+> 使用CIDR后，由于要寻找最长前缀匹配，使路由表的查找过程变得更加复杂。当路由表的项目数很大时，应当设法减小路由表的查找时间。
+
+- 最简单的查找算法，对所有可能的前缀进行循环查找。这种方式效率低下，产生没有必要的查找次数。
+- 最常用的是二叉线索查找，同时为了简化二叉线索的结构，可以先找出每一个IP地址的唯一前缀。这样就可以用唯一前缀来构造二叉线索，查找时，只要能够和唯一前缀相匹配就可以了。为了加快二叉线索的查找速度，广泛使用了各种压缩技术。如只要一个地址的前4位是1101，就可以跳过前面4位而直接从第5位开始比较。
+
+## 4.4 网际控制报文协议 ICMP
+
+> 为了更有效地转发IP数据报和提高交付成功的机会。
+
+ICMP 允许主机或路由器报告差错情况和提供有关异常情况的报告。虽然ICMP报文在IP数据报的数据部分，但ICMP不是高层协议，而是IP层的协议。
+
+![ICMP报文的格式](https://pic.downk.cc/item/5e43bd832fb38b8c3cd06c3d.jpg)
+
+   ### 4.4.1 ICMP报文的种类
+
+> ICMP差错报告报文和ICMP询问报文
+
+常用的几种ICMP报文类型
+
+![](https://pic.downk.cc/item/5e43c0462fb38b8c3cd0ebcc.jpg)
+
+>  IP数据报首部的检验并不会检验IP数据报的内容，因此不能保证经过传输的ICMP报文不产生差错。
+
+- 所有的ICMP差错报告报文中的数据字段都具有同样的格式。
+
+![](https://pic.downk.cc/item/5e43dc1c2fb38b8c3cd58092.jpg)
+
+把收到的需要进行差错报告的IP数据报的首部和数据字段的前8个字节提取出来，作为ICMP报文的数据字段，加上相应的ICMP差错报告报文的前8个字节，就构成了ICMP差错报告报文。提取收到数据报的数据字段的前8个字节是为了得到运输层的端口号，这些信息对源点通知高层协议是有用的。
+
+### 4.4.2 ICMP的应用举例
+
+- 分组网间探测 PING 。用来测试两台主机之间的连通性，使用了ICMP回送请求和回送回答报文。PING是应用层直接使用网络层ICMP的一个例子，它没有通过运输层的TCP或UDP
