--- a/计算机网络.md
+++ b/计算机网络.md
@@ -392,4 +392,56 @@ ICMP 允许主机或路由器报告差错情况和提供有关异常情况的报
 
 ### 4.4.2 ICMP的应用举例
 
-- 分组网间探测 PING 。用来测试两台主机之间的连通性，使用了ICMP回送请求和回送回答报文。PING是应用层直接使用网络层ICMP的一个例子，它没有通过运输层的TCP或UDP
+- 分组网间探测 PING 。用来测试两台主机之间的连通性，使用了ICMP回送请求和回送回答报文。PING是应用层直接使用网络层ICMP的一个例子，它没有通过运输层的TCP或UDP。
+
+- 用来跟踪一个分组从源点到终点的路径。 traceroute (UNIX系统)应用，tracert(windows系统)命令。 
+
+  traceroute 从源主机向目的主机发送一连串的IP数据报，数据报中封装的是无法交付(使用了非法的端口号)的UDP用户数据报。通过设置不同的数据报生存时间TTL，当路由收到数据报TTL为零时，就把数据报丢弃，并向源主机发送一个ICMP时间超过的差错报告报文（若到达目的主机时则向源主机发送ICMP终点不可达差错报告报文）。就这样，这些路由器和最后的目的主机发来的ICMP报文正好给出了源主机想知道的路由信息。
+
+  通过观察源点到终点的路由信息，完全有这样的可能：经过更多的路由器反而会花费更少的时间。因此，经过的路由数量与花费的时间并没有很大关系。
+
+## 4.5 互联网的路由选择协议
+
+### 4.5.1 有关路由选择协议的几个基本概念
+
+1. 理想的路由算法
+
+   1. 算法必须是正确的和完整的。
+   2. 算法在计算上应简单。
+   3. 算法应能适应通信量和网络拓扑的变化（自适应性和稳健性）
+   4. 算法应具有稳定性
+   5. 算法应是公平的
+   6. 算法应是最佳的
+
+2. 分层次的路由选择协议
+
+   > 将整个互联网划分为许多较小的自治系统，记为AS(autonomous system)。AS是在单一技术管理下的一组路由器，这些路由器使用一种自治系统内部的路由选择协议和共同度量。一个AS对其他AS表现出的是一个单一的和一致的路由选择协议。
+
+   这样，互联网就把路由选择协议划分为：**内部网关协议 IGP** 和 **外部网关协议 EGP** 。自治系统之间的路由选择叫域间路由选择，而在自治系统内部的路由选择叫做域内路由选择。
+
+   ![](https://pic.downk.cc/item/5e44b22d48b86553eea77c34.jpg)
+
+ 
+
+### 4.5.2 内部网关协议RIP
+
+> 路由信息协议，是一种分布式的基于距离向量的路由选择协议。每一个路由器都要不断地和其他一些路由器交换路由信息。
+
+1. 工作原理
+
+   RIP协议要求网络中的每一个路由器都要维护从它自己到其他每一个目的网络的距离记录，**距离**也称跳数，每经过一个路由器跳数就加一。
+   
+   它只适用于小型的互联网，它认为好的路由就是它通过的路由器的数目少同时允许一个路径最多只能包含15个路由器。
+   
+   RIP协议的特点
+   
+   - 仅和相邻的路由器交换信息
+   - 交换的信息是当前本路由器所知道的全部信息，即自己现在的路由表。
+   - 按固定的时间间隔交换路由信息
+   
+   
+   
+   
+   
+   
+
