--- a/计算机网络.md
+++ b/计算机网络.md
@@ -435,13 +435,203 @@ ICMP 允许主机或路由器报告差错情况和提供有关异常情况的报
    
    RIP协议的特点
    
-   - 仅和相邻的路由器交换信息
+   - 仅和相邻的路由器交换信息。
    - 交换的信息是当前本路由器所知道的全部信息，即自己现在的路由表。
-   - 按固定的时间间隔交换路由信息
+   - 按固定的时间间隔交换路由信息。
+   
+2. 距离向量算法
+> 要点：设X是结点A到B的最短路径上的一个结点。若把路径A->B 拆成 A->X 和 X
+
+   RIP报文的所有项目
+
+|  项目    | 符号     |
+| ---- | ---- |
+|  目的网络  | N     |
+|  距离   |  d    |
+| 下一跳路由器| X |
+
+​			a. 对地址X的相邻路由器发来的RIP报文，先修改此报文中的所有项目： 下一跳地址的地址都改为X,并把所有的 距离字段的值加1。
+
+​			b.  对发来的RIP修改后的每一个项目，进行判断和处理：
+
+​					原路由表中没有目的网络N,则添加该条项目到路由表中。
+
+​					否则，比对下一跳路由器地址
+
+​							若为X,则更新替换原路由表的项目
+
+​							若不为X且距离字段 d,小于路由表中的距离，更新。
+
+​							否则 什么也不做
+
+​			c. 3分钟还没有收到相邻路由器的更新路由表，则把此相邻路由器记作不可达。
+
+3. RIP协议的报文格式
+
+   ![](https://pic.downk.cc/item/5e475cd748b86553ee6a613b.jpg)
+
+4. RIP主要的缺点：好消息传播得快，而当网络出现故障时坏消息传播得慢（30S）。
+
+   最大优点：实现简单，开销较小。在网络规模较小的网络中，使用RIP协议仍占大多数。
+
+
+
+### 4.5.3 内部网关协议 OSPF
+
+> 开放最短路径优先 Open Shortest Path First，为了克服RIP的缺点开发出来。称为“最短路径优先”是因为使用了最短路径算法SPF。
+
+1. 基本特点
+
+   最主要的特征是使用分布式的链路状态协议，而不是像RIP的距离向量协议，有三个要点和RIP不同：
+
+   - 向本自治系统中的所有路由器发送信息。使用 洪泛法，类似病毒式的感染传播。
+   - 发送的信息就是与本路由器相邻的所有路由器的链路状态，但这只是路由器所知道的部分信息。
+   - 只有当链路状态发生变化时，路由器才向所有路由器用洪泛法发送此信息。而RIP,不管网络拓扑有无变化，路由器之间都要定期交换路由表的信息。
+
+   最终，所有的路由器都能建立一个链路状态数据库，实际上就是全网的拓扑结构图。因此，每一个路由器都知道全网所有路由器的信息。OSPF的链路状态数据库能较快地进行更新，使各个路由器能及时更新其路由表。OSPF的更新过程收敛快速是其重要的优点。
+
+   **划分区域** OSPF将一个自治系统再划分为若干个更小的范围。这样把洪泛法交换链路状态信息的范围局限于每一个区域而不是整个自治系统，这样就减少了整个网络上的通信量。
+
+![](https://pic.downk.cc/item/5e478acf48b86553ee71eeb4.jpg)
+
+​		OSPF不同UDP而是直接用IP数据报传送，OSPF构成的数据报很短。这样可以减少通信量，也不必将长的的数据报分片传送。
+
+![](https://pic.downk.cc/item/5e478c9a48b86553ee7244ac.jpg)
+
+其他特点
+
+- OSPF允许管理员给每条路由指派不同的代价。
+
+- 如果到同一个目的网络有多条相同代价的路径，那么可以将通信量分配给这几条路径。这叫做多路径间的负载平衡。
+- 所有在OSPF路由器之间交换的分组都具有鉴别的功能，可以保证仅在可信赖的路由器之间交换链路状态信息。
+- OSPF支持可边长度的子网划分和无分类编址的CIDR。
+- 网络中的链路状态可能经常发生变化，因此OSPF让每一个链路状态都带上一个32位的序号，序号越大状态就越新。
+
+2. OSPF的五种分组类型
+
+- 类型1，问候分组，用来发现和维持邻站的可达性。每隔10s要交换一次问候分组，以确定相邻路由器的可达性。
+- 类型2，数据库描述分组，向邻站给出自己的链路状态数据库。
+- 类型3，链路状态请求，向对方请求发送某些链路状态项目的详细信息。
+- 类型4，链路状态更新分组，用洪泛法对全网更新链路状态。
+- 类型5，链路状态确认，对链路更新分组确认。
+
+OSPF 让每一个路由器用数据库描述分组和相邻路由器交换本数据库中已有的链路状态摘要信息。
+
+其中摘要信息中，可以知道哪些路由器的链路状态信息已经写入了数据库。过程如下图。
+
+![](https://pic.downk.cc/item/5e47a6df48b86553ee78671b.jpg)
+
+网络运行过程中，只要一个路由器的链路状态发生变化，该路由器就要使用链路状态更新分组，用洪泛法向全网更新链路状态。OSPF使用的是**可靠的洪泛法**，在收到更新分组后要发送确认。
+
+![](https://pic.downk.cc/item/5e47b11948b86553ee7aa74c.jpg)
+
+### 4.5.4 外部网关协议BGP
+
+> 边界网关协议BGP，BGP用于自治系统AS之间的环境。在自治系统AS之间交换“可达性”信息。例如，告诉相邻路由器，“到达目的网络N可经过自治系统ASx”
+
+需要考虑的因素：
+
+- 互联网规模太大，使得自治系统AS之间路由选择非常困难。
+- 自治系统AS之间的路由选择必须考虑有关策略。例如，某些自治系统的限制。
+
+因此，BGP只能力求寻找一条能够**到达目的网络且比较好的路由**，并非寻找一条最佳的路由。BGP协议交换路由信息的结点数量级是**自治系统个数的量级**，相比自治系统中的网络数少很多。
+
+BGP解决距离向量路由选择算法中的“坏消息传播得慢”的问题。当某个路由器或者链路出故障时BGP发言人可以不止一个邻站获得路由信息，因此容易选择出新的路由。而距离向量算法往往不能给出正确的选择，这些算法不能指出哪些邻站到目的站的路由是独立的。
+
+BGP-4的四种报文：
+
+- OPEN报文，初始化与另一个BGP发言人的通信， 建立关系
+- UPDATE报文，通告某一路由信息，以及列出要撤销的多条路由。
+- KEEPALIVE报文，用来周期性地证实邻站的连通性。
+- NOTIFICATION报文，用来发送检测到的差错。
+
+<img src="https://pic.downk.cc/item/5e49ede348b86553eeff423a.jpg" style="zoom:80%;" />
+
+
+
+### 4.5.5 路由器的构成
+
+> 路由器是一种具有多个输入输出和多个输出端口的专用计算机，其任务是转发分组。路由器的转发分组正是网络层的主要工作。
+
+1. 路由器的结构
+
+   整个的路由器的结构可划分为两大部分 **路由选择** 、**分组转发** 。
+
+    <img src="https://pic.downk.cc/item/5e49f06148b86553eeffbeec.jpg" style="zoom:80%;" />
+
+    **分组转发和路由选择的区别：**
+      转发表仅仅涉及到一个路由器，应当使查找过程最优化，可用特殊的硬件来实现。
+   
+      路由表是许多路由器共同协作的结果，应当对网络拓扑的变化的计算最优化，用软件算法来实现。
    
    
    
+2. 交换结构
+    ![](https://pic.downk.cc/item/5e4a054948b86553ee034b9f.jpg)
+
+## 4.6 IPv6
+
+> 解决IP地址耗尽的根本措施就是采用具有更大地址空间的新版本IP,IPv6
+
+### 4.6.1 IPv6的基本首部
+> IPv6仍然支持无连接的传送，将协议数据单元PDU称为分组，而不是IPv4的数据报。方便起见仍采用数据报这一名词。
+
+主要变化：
+a. 更大的地址空间。IPv6从IPv4的32位增大到128位，使地址空间增大了  2<sup>96</sup>倍。
+b. 扩展的地址层次结构。
+c. 灵活的首部格式。定义了许多可选的扩展首部，不仅比IPv4提供更多的功能，而且还可以提高路由器的处理效率（因为路由器对扩展的首部不进行处理）。
+d. 改进的选项。允许数据报包含有选项的控制信息，可以包含一些新的选项。IPv6的首部长度是固定的，其选项放在有效负荷中。
+e. 允许协议继续扩充。
+f. 支持即插即用
+g. 支持资源的预分配
+h. 首部改为8字节对齐
+![](https://pic.downk.cc/item/5e4a280d48b86553ee0a3e08.jpg)
+
+- IPv6把原来IPv4首部中选项的功能都放在扩展首部中，并把扩展首部留给路径两端的源点和终点的主机来处理，大大提高了路由器的处理效率。
+
+### 4.6.2 IPv6的地址
+
+一个IPv6的数据报的目的地址可以是以下三种基本类型：
+
+1. 单播。传统的点对点通信。
+2. 多播。 一点对多点的通信，数据报发送到一组中所有计算机。 将广播看作是多播的一个特例。
+3. 任播。任播的终点是一组计算机，但数据报只交付其中一个，通常是距离最近的一个。
+
+- 为了使地址简洁，IPv6使用**冒号16进制记法** 
+  允许0省略 0压缩记法，其次还可以结合使用点分十进制记法后缀，在IPv4向v6的转换阶段特别有用。CIDR斜线表示法仍然有用。
+  ![](https://pic.downk.cc/item/5e4a36ec48b86553ee0db8b9.jpg)
+
+![](https://pic.downk.cc/item/5e4a39b048b86553ee0e447b.jpg)
+
+### 4.6.3 从IPv4向IPv6过渡
+
+> 由于现在互联网规模太大，向IPv6过渡只能采用逐步演进的办法。IPv6系统必须能够接收和转发IPv4分组，并且能够为IPv4分组选择路由。
+
+1. 双协议栈
+
+   > 在完全过渡到v6之前，使一部分主机装有双协议栈：一个IPv4和一个IPv6。无论是v4还是v6都可以进行通信。表明双协议栈的主机具有两种IP地址v4和v6。
+
+   ![](https://pic.downk.cc/item/5e4a3b8d48b86553ee0e9e73.jpg)
+
    
+
+   需要注意的是：由于转发过程中，数据报的转换导致IPv6首部中的某些字段无法恢复。
+
    
-   
+
+2.  隧道技术
+
+   > 这种方法要点就是在v6数据报要进入v4网络时，把v6数据报封装成v4的数据报的数据部分。相当于v6数据报就像在IPv4网络的隧道中传输没有发生什么变化。当离开v4隧道时，再把数据交给主机的v6协议栈。
+
+   ![](https://pic.downk.cc/item/5e4a3c3e48b86553ee0ebfd9.jpg)
+
+
+
+### 4.6.4 ICMPv6
+
+> 给IPv6反馈差错信息，地址解析协议ARP和网际组管理协议IGMP的功能都已被合并到ICMPv6。
+
+<img src="https://pic.downk.cc/item/5e4a470248b86553ee10e83b.jpg" style="zoom:80%;" />
+
+## 4.7 IP多播
 
