计算机网络

--- a/计算机网络.md
+++ b/计算机网络.md
@@ -635,3 +635,18 @@ h. 首部改为8字节对齐
 
 ## 4.7 IP多播
 
+> 一对多通信。多播可大大节约网络资源，服务器只要发送一次多播数据报，在路由器转发分组时，需要把收到的分组复制成多个副本。当分组到达目的局域网时，局域网具有硬件多播功能，不需要复制分组，在局域网上的多播组成员都能收到多播数据报。
+
+### 4.7.1 基本概念
+
+- 在互联网上进行多播就叫做IP多播，IP多播所传送的分组需要使用多播IP地址。
+
+- 在多播数据报的目的地址写入的是多播组的标识符，而不是目的主机的IP地址。并设法让加入到多播组的主机IP地址与多播组的标识符关联起来。
+
+- 多播组的标识符就是IP地址中的D类地址，多播数据报也是尽最大努力的交付，首部中协议字段值是2，表明使用网际组管理协议IGMP。
+- 多播地址只能用于目的地址，不能用于源地址，多播数据报不产生ICMP差错报文。
+
+### 4.7.2 在局域网上进行硬件多播
+
+
+
