--- a/计算机网络.md
+++ b/计算机网络.md
@@ -574,6 +574,7 @@ BGP-4的四种报文：
 > 解决IP地址耗尽的根本措施就是采用具有更大地址空间的新版本IP,IPv6
 
 ### 4.6.1 IPv6的基本首部
+
 > IPv6仍然支持无连接的传送，将协议数据单元PDU称为分组，而不是IPv4的数据报。方便起见仍采用数据报这一名词。
 
 主要变化：
@@ -647,6 +648,70 @@ h. 首部改为8字节对齐
 - 多播地址只能用于目的地址，不能用于源地址，多播数据报不产生ICMP差错报文。
 
 ### 4.7.2 在局域网上进行硬件多播
+
+> 互联网号码指派管理局IANA拥有的以太网多播地址的范围是从01-00-5E-00-00-00 到 01-00-5E-7F-FF-FF。在每一个地址中，只有23位可用作多播。这只能和D类IP地址中的23位有一一对应的关系，可供分配的有28位，其中的前五位不能用来构成以太网硬件地址。
+
+![](https://pic.downk.cc/item/5e4c914148b86553ee7ac12a.jpg)
+由于多播IP地址与以太网硬件地址的映射关系不是唯一的，因此收到多播数据报的主机，还要在IP层利用软件进行过滤，把不是本主机要接收的数据报丢弃 。
+
+### 4.7.3 网际组管理协议IGMP和多播路由选择协议
+
+1. IP多播需要两种协议
+
+- **网际组管理协议IGMP** 。使路由器知道多播组成员的信息。IGMP协议是让连接在本地局域网上的多播路由器知道本局域网上是否有主机参加或退出了某个多播组。
+
+- **多播路由选择协议**。
+ (1). 多播转发必须动态地适应多播组成员的变化（这时网络拓扑并未发生变化），而单播路由选择通常是在网络拓扑发生变化时才需要更新路由。
+ (2). 多播路由器在转发多播数据报时，不能仅仅根据多播数据报中的目的地址，还需要考虑发送地址。
+ (3). 多播数据报可以由没有加入多播组的主机发出，也可以通过没有组成员接入的网络。
+
+2. 网际组管理协议IGMP
+> IGMP不是一个单独的协议，而是整个网际协议IP的一个组成部分。
+
+IGMP的工作的两个阶段：
+- 第一阶段：当某台主机加入新的多播组时，该主机应向多播组的多播地址发送一个IGMP报文，声明自已要成为该组的成员。本地的多播路由器收到IGMP报文后，还要利用多播路由选择协议把这种组成员关系转发给互联网上的其他多播路由器。
+
+- 第二阶段：组成员的关系是动态的。本地多播路由器要周期性地探询本地局域网上的主机，以便知道这些主机是否继续是组的成员。只有有一台主机对某个组响应，多播路由器就认为这个组是活跃的。但一个组在经过几次的探询后仍然没有一台主机响应，多播路由器就认为本网络上的主机已经都离开了这个组，因此也就不再把这个组的成员关系转发给其他的路由器。
+
+为避免控制信息给网络增大开销的具体措施：
+- a. 主机和多播路由器之间的所有通信都是使用IP多播，只要有可能携带IGMP报文的数据报都用硬件多播来传送。因此在支持硬件多播的网络上，没有参加IP多播的主机不会收到IGMP报文。
+- b. 多播路由器探询组成员关系时，只需要对所有组发送一个请求信息的询问报文，而不需要对每一个组发送一个询问报文。默认的询问周期125s
+- c. 当同一个网络上连接有几个多播路由器时，能够迅速和有效选择其中一个来探询主机的成员关系。
+- d. IGMP询问报文有一个数值N，指明一个最长响应时间。主机收到询问时在0-N间随机选择发送响应所需的时延，对应于最小的时延的响应最先发送。因此一台主机同时参加了几个多播组，主机对每一个多播组选择不同的响应时延。
+- e. 同一个组内的每一台主机都要监听响应。只要有本组的其他主机先发送了响应，自己就可以不再发送响应。这样可以抑制不必要的通信量。
+
+多播路由器并不需要保留组成员关系的准确记录，只需知道网络上是否至少还有一台主机是本组成员即可，实际上，对对询问报文每一个分组只需要有一台主机发送响应。
+
+强调指出，多播数据报的发送者和接收者都不知道也无法找出一个多播组的成员有多少以及这些成员哪些是主机。
+
+3. 多播路由选择协议
+> TCP/IP 中多播协议已成为建议标准，但多播路由选择协议则尚未标准化。
+
+在多播过程中一个多播组中的成员是动态变化的。随时会有主机动态加入或离开。多播路由选择实际上就是要找出以源主机为根节点的多播转发树。
+
+多种实用的多播路由选择协议，在转发多播数据报时使用了以下三种方法：
+
+a. 洪泛与剪枝。适合于较小的多播组，而所有的组成员接入的局域网也是相邻接的。路由器开始转发多播数据报使用洪泛的方法，为了避免兜圈子采用了 **反向路径广播RPB策略**。RPB的要点是：每一个路由器在收到一个多播数据报时，先检查数据报是否经源点最短路径传来，若是就（除来时的方向）向所有其他方向转发，否则丢弃。如果存在几条同样长度的路径则选择IP地址最小的。
+![](https://pic.downk.cc/item/5e4caa3b48b86553ee7f3edf.jpg)
+
+b. 隧道技术。隧道技术适用于多播组的位置在地理上很分散的情况。可以对多播数据报进行二次封装，使之成为向单一目的站发送的单播数据报，通过隧道发送到目的地址。到达目的后恢复成原来的多播数据报，继续向多个目的站发送。
+![](https://pic.downk.cc/item/5e4cac8648b86553ee7fbf15.jpg)
+
+c. 基于核心的发现技术。这种方法对于多播组的大小在较大范围变化时都适合。对于每一个多播组都指定一个核心路由器，给出它的IP单播地址。判断收到的数据报是否是多播数据报，就向成员转发这个多播数据报。
+
+建议使用的多播路由选择协议：
+- 距离向量多播路由协议DVMRP
+- 基于核心的转发树CBT
+- 开放最短通路优先的多播扩展MOSPF
+- 协议无关多播-稀疏方式PIM-SM
+- 协议无关多播-密集方式PIM-DM
+
+## 4.8 虚拟专用网VPN和网络地址转换NAT
+
+### 4.8.1 虚拟专用网VPN
+> 用于机构内部，自行分配的本地地址，不需要分配全球唯一的iP地址。为了避免本地地址和全球地址的二义性吗，分配了一些专用地址。这些地址只能用做本地地址而不能用作全球地址。在互联网中的所有路由器，对目的地址是专用地址的数据报一律不进行转发。
+
+
 
 
 
