--- a/计算机网络.md
+++ b/计算机网络.md
@@ -815,5 +815,39 @@ MPLS的首部包括以下四个字段：
 
 ### 5.1.1 进程之间的通信
 
-> 运输层向上面的应用层提供通信服务，
+> 运输层向上面的应用层提供通信服务，属于面向通信部分的最高层，同时也是用户功能中的最底层。网络边缘部分中的两台主机使用网络的核心部分的功能进行端到端的通信时，只有主机的协议栈才有运输层，而网络核心部分中的路由器在转发分组时都只用到下三层的功能。
+
+### 5.1.2 运输层的两个主要协议
+
+### 5.1.3 运输层的端口
+
+
+
+## 5.2 用户数据报协议 UDP
+
+### 5.2.1 UDP概述
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
